--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ opensearch-py = { version = "^2.3.1", optional = true }
 requests-aws4auth = { version = "1.2.3", optional = true }
 pgvector = { version = "^0.2.3", optional = true }
 psycopg2-binary = { version = "^2.9.9", optional = true }
+pillow = "^10.1.0"
 
 
 [tool.poetry.extras]
